syntax = "proto3";

option csharp_namespace = "Grpc.Server";

service Customer {
	rpc GetCustomerInfo (CustomerLooupModel) returns (CustomerModel);
	rpc GetNewCustomers (NewCustomerRequest) returns (stream CustomerModel);
}

message CustomerLooupModel {
	int32 userId = 1;
}

message CustomerModel {
	string firstName = 1;
	string lastName = 2;
	string emailAddress = 3;
	bool isAlive = 4;
	int32 age = 5;
}

message NewCustomerRequest{

}